@@ -2,6 +2,7 @@ intended v0.1.21
 + start implementing std/time
 + implement copy - shallow object/array copying, with a flag for deep copying
 + implement keys
++ implement flatten
 
 v0.1.20
 + ui/Component API cleanup
